[gd_scene load_steps=20 format=3 uid="uid://dforcyy8w40mh"]

[ext_resource type="Script" path="res://Scripts/Menus/pause_menu.gd" id="1_b0b17"]
[ext_resource type="FontFile" uid="uid://dyd80n3v81nhl" path="res://Assets/Text Fonts/AldotheApache.ttf" id="1_xch4n"]
[ext_resource type="FontFile" uid="uid://dh1or6jgu5dia" path="res://Assets/Text Fonts/Gameplay.ttf" id="2_5ge18"]
[ext_resource type="PackedScene" uid="uid://cd2kmfycbf3i8" path="res://Scenes/Options Menu/options_tab_menu.tscn" id="4_voran"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74inq"]
bg_color = Color(0.625597, 0.625597, 0.625597, 0.843137)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vnnpt"]
bg_color = Color(0.762404, 0.762404, 0.762404, 0.843137)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tvtxo"]
bg_color = Color(0, 0, 0, 0.843137)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_alaml"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24lwi"]
bg_color = Color(0.375637, 0.411776, 0.112002, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2mok"]
bg_color = Color(0.277247, 0.305129, 0.0738357, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_58tno"]
bg_color = Color(0.443125, 0.484925, 0.138209, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uf7qh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p4g7l"]
bg_color = Color(0.14713, 0.288952, 0.958961, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u0ih6"]
bg_color = Color(0.0894142, 0.148495, 0.848712, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0rix"]
bg_color = Color(0.245638, 0.419096, 0.983942, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a82fa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5g7e"]
bg_color = Color(0.835718, 1.73271e-06, 4.81307e-07, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3wtlt"]
bg_color = Color(0.625575, 6.97896e-07, 3.85046e-07, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vpxdf"]
bg_color = Color(1, 0.151344, 0.108333, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0b17")

[node name="options_tab" parent="." instance=ExtResource("4_voran")]
visible = false
layout_mode = 2
offset_left = 1.0
offset_top = 7.0
offset_right = 534.0
offset_bottom = 375.0

[node name="Back" type="Button" parent="options_tab"]
custom_minimum_size = Vector2(150, 70)
layout_direction = 1
layout_mode = 0
offset_left = 168.0
offset_top = 31.0
offset_right = 318.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("1_xch4n")
theme_override_font_sizes/font_size = 61
theme_override_styles/hover = SubResource("StyleBoxFlat_74inq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vnnpt")
theme_override_styles/normal = SubResource("StyleBoxFlat_tvtxo")
text = "BACK
"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.513
anchor_top = 0.505
anchor_right = 0.513
anchor_bottom = 0.505
offset_left = -266.976
offset_top = -184.24
offset_right = 266.024
offset_bottom = 183.76
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 45

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5ge18")
theme_override_font_sizes/font_size = 25
text = "
- GAME PAUSE -"
horizontal_alignment = 1

[node name="Continue Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xch4n")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_alaml")
theme_override_styles/hover = SubResource("StyleBoxFlat_24lwi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p2mok")
theme_override_styles/normal = SubResource("StyleBoxFlat_58tno")
text = "COntinue
"

[node name="Options Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xch4n")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_uf7qh")
theme_override_styles/hover = SubResource("StyleBoxFlat_p4g7l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u0ih6")
theme_override_styles/normal = SubResource("StyleBoxFlat_l0rix")
text = "Options
"

[node name="Return Button" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xch4n")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_a82fa")
theme_override_styles/hover = SubResource("StyleBoxFlat_j5g7e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3wtlt")
theme_override_styles/normal = SubResource("StyleBoxFlat_vpxdf")
text = "Main Menu"

[connection signal="pressed" from="options_tab/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Continue Button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Options Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Return Button" to="." method="_on_return_button_pressed"]
